--- a/installed/build.gradle
+++ b/installed/build.gradle
@@ -50,6 +50,7 @@ android {
 dependencies {
     implementation project(':base')
     implementation project(":home")
+    implementation project(":companies")
 }
 
 apply plugin: 'com.google.gms.google-services'
