--- a/companies/src/main/AndroidManifest.xml
+++ b/companies/src/main/AndroidManifest.xml
@@ -6,7 +6,20 @@
         <activity android:name=".view.CompaniesActivity">
             <intent-filter
                 android:autoVerify="true"
-                android:order="2">
+                android:order="3">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="remotejobs.trmamobile.com"
+                    android:path="/companies"
+                    android:scheme="http" />
+            </intent-filter>
+            <intent-filter
+                android:autoVerify="true"
+                android:order="3">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -16,19 +29,11 @@
                     android:host="remotejobs.trmamobile.com"
                     android:path="/companies"
                     android:scheme="https" />
-
-                <data
-                    android:host="remotejobs.trmamobile.com"
-                    android:path="/companies"
-                    android:scheme="http" />
             </intent-filter>
         </activity>
 
         <activity android:name=".view.CompaniesSelectActivity" />
 
-        <meta-data
-            android:name="default-url"
-            android:value="https://remotejobs.trmamobile.com/companies" />
     </application>
 
 </manifest>
