--- a/installed/build.gradle
+++ b/installed/build.gradle
@@ -51,6 +51,7 @@ android {
 dependencies {
     implementation project(':base')
     implementation project(":home")
+    implementation project(":highestpaid")
     implementation project(":companies")
 }
 
