--- a/instantapp/build.gradle
+++ b/instantapp/build.gradle
@@ -4,4 +4,5 @@ dependencies {
     implementation project(':base')
     implementation project(':home')
     implementation project(':companies')
+    implementation project(':highestpaid')
 }
