--- a/base/build.gradle
+++ b/base/build.gradle
@@ -31,17 +31,14 @@ android {
     buildTypes {
         debug {
             resValue "bool", "is_release", "false"
-            minifyEnabled false
-            testCoverageEnabled false
         }
 
         release {
             resValue "bool", "is_release", "true"
             minifyEnabled true
             signingConfig signingConfigs.release
-            debuggable false
-            testCoverageEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), '../proguard-rules.pro'
         }
     }
 
@@ -80,10 +77,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v4'
     }
     api "com.android.support.constraint:constraint-layout:$constraint_layout"
-    api "com.android.support:design:${rootProject.supportLibs}"
-    /*api "com.android.support:support-vector-drawable:${rootProject.supportLibs}"*/
-    /*api "com.android.support:recyclerview-v7:${rootProject.supportLibs}"
-    api "com.android.support:cardview-v7:${rootProject.supportLibs}"*/
+    api("com.android.support:design:${rootProject.supportLibs}") {
+        exclude module: 'animated-vector-drawable'
+    }
     api "com.google.android:flexbox:0.2.6"
     api "com.android.support:multidex:${rootProject.multidex}"
     api "org.apache.commons:commons-text:1.2"
@@ -92,9 +88,7 @@ dependencies {
 
     /*############################## Firebase #####################################*/
     api "com.google.firebase:firebase-core:${rootProject.firebase}"
-    api "com.google.firebase:firebase-messaging:${rootProject.firebase}"
-    /*api "com.google.firebase:firebase-auth:15.1.0"
-    api "com.google.android.gms:play-services-analytics:${rootProject.firebase}"*/
+    api "com.google.firebase:firebase-messaging:${rootProject.firebase_message}"
     /*############################################################################*/
 
     /*############################# Crashlytics ####################################*/
@@ -126,11 +120,6 @@ dependencies {
 
     /*########################### Image libs #####################################*/
     api "com.squareup.picasso:picasso:${rootProject.picasso}"
-    /*############################################################################*/
-
-    /*################ Facebook Sthetho for debug conections #####################*/
-    /*api "com.facebook.stetho:stetho:${rootProject.stetho}"
-    api "com.facebook.stetho:stetho-okhttp3:${rootProject.stetho}"*/
     /*############################################################################*/
 
     /*######################## Architetures Components ###########################*/
