--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ buildscript {
     ext.multidex = '1.0.3'
 
     ext.crashlytics = '2.8.0'
-    ext.firebase = '15.0.2'
+    ext.firebase = '16.0.0'
+    ext.firebase_message = '17.0.0'
 
     ext.kotlin_version = '1.2.41'
     ext.anko_version = '0.10.4'
@@ -33,7 +34,8 @@ buildscript {
     ext.rxandroid = '2.0.1'
     ext.rxjava = '2.1.0'
 
-    ext.dagger = '2.13'
+    ext.dagger = '2.14.1'
+    ext.dagger_processor = '2.13'
     ext.stetho = '1.5.0'
     ext.picasso = '2.71828'
 
@@ -59,9 +61,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0-alpha15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'io.fabric.tools:gradle:1.25.2'
+        classpath 'io.fabric.tools:gradle:1.25.3'
         classpath 'com.google.gms:google-services:3.2.1'
-        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha01'
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha01"
     }
 }
 
