--- a/feature.gradle
+++ b/feature.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.feature'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.fabric'
 
 
 android {
@@ -24,17 +25,14 @@ android {
     buildTypes {
         debug {
             resValue "bool", "is_release", "false"
-            minifyEnabled false
-            testCoverageEnabled false
         }
 
         release {
             resValue "bool", "is_release", "true"
             minifyEnabled true
             signingConfig signingConfigs.release
-            debuggable false
-            testCoverageEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), '../base/proguard-rules.pro'
+            debuggable true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), '../proguard-rules.pro'
         }
     }
 
@@ -48,12 +46,15 @@ android {
     }
 }
 
+crashlytics { instantAppSupport true }
+
 dependencies {
+    implementation project(':base')
+
     implementation "com.google.dagger:dagger:$project.dagger"
     kapt "com.google.dagger:dagger-compiler:$project.dagger"
 
     // Dagger Android
     implementation "com.google.dagger:dagger-android-support:$rootProject.dagger"
     kapt "com.google.dagger:dagger-android-processor:$project.dagger"
-    implementation project(':base')
 }
