--- a/highestpaid/src/main/AndroidManifest.xml
+++ b/highestpaid/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs.trmamobile.com"
+                    android:host="remotejobs-aa979.firebaseapp.com"
                     android:path="/highestpaid"
                     android:scheme="http" />
             </intent-filter>
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs.trmamobile.com"
+                    android:host="remotejobs-aa979.firebaseapp.com"
                     android:path="/highestpaid"
                     android:scheme="https" />
             </intent-filter>
