--- a/home/src/main/AndroidManifest.xml
+++ b/home/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
             <meta-data
                 android:name="default-url"
-                android:value="https://remotejobs.trmamobile.com/home" />
+                android:value="https://remotejobs-aa979.firebaseapp.com/home" />
 
             <intent-filter
                 android:autoVerify="true"
@@ -33,7 +33,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs.trmamobile.com"
+                    android:host="remotejobs-aa979.firebaseapp.com"
                     android:path="/home"
                     android:scheme="https" />
 
@@ -47,7 +47,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs.trmamobile.com"
+                    android:host="remotejobs-aa979.firebaseapp.com"
                     android:path="/home"
                     android:scheme="http" />
             </intent-filter>
