--- a/base/build.gradle
+++ b/base/build.gradle
@@ -31,6 +31,7 @@ android {
     buildTypes {
         debug {
             resValue "bool", "is_release", "false"
+            ext.enableCrashlytics = false
         }
 
         release {
