--- a/base/build.gradle
+++ b/base/build.gradle
@@ -131,8 +131,8 @@ dependencies {
     api "android.arch.lifecycle:extensions:${rootProject.arch_lifecycle}"
     kapt "android.arch.lifecycle:compiler:${rootProject.arch}"
 
-    implementation "android.arch.navigation:navigation-fragment-ktx:${rootProject.nav_version}"
-    implementation "android.arch.navigation:navigation-ui-ktx:${rootProject.nav_version}"
+    //implementation "android.arch.navigation:navigation-fragment-ktx:${rootProject.nav_version}"
+    //implementation "android.arch.navigation:navigation-ui-ktx:${rootProject.nav_version}"
     /*############################################################################*/
 
     /*######################## Dependency injection ###########################*/
