--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.25.3'
         classpath 'com.google.gms:google-services:3.2.1'
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha01"
+        //classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha01"
     }
 }
 
