--- a/installed/build.gradle
+++ b/installed/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: "androidx.navigation.safeargs"
+//apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -53,5 +53,3 @@ dependencies {
     implementation project(':highestpaid')
     implementation project(':companies')
 }
-
-apply plugin: 'com.google.gms.google-services'
