--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,11 @@ buildscript {
     ext.buildToolsVersion = '27.0.3'
     ext.minSdkVersion = 21
     ext.targetSdkVersion = 27
-    ext.versionCode = 6
-    ext.versionName = '1.6'
+    ext.versionCode = 7
+    ext.versionName = '1.7'
 
     ext.supportLibs = '27.1.1'
-    ext.constraint_layout = '1.1.0'
+    ext.constraint_layout = '1.1.1'
 
     ext.arch = "1.1.0"
     ext.arch_lifecycle = "1.1.1"
@@ -59,7 +59,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-alpha16'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.25.4'
         classpath 'com.google.gms:google-services:3.2.1'
