--- a/installed/build.gradle
+++ b/installed/build.gradle
@@ -56,6 +56,7 @@ android {
 
 dependencies {
     implementation project(':base')
+    implementation project(':splash')
     implementation project(':home')
     implementation project(':highestpaid')
     implementation project(':companies')
