--- a/base/build.gradle
+++ b/base/build.gradle
@@ -24,7 +24,15 @@ android {
 
     signingConfigs {
         debug {}
-        release {}
+        release {
+            Properties localProps = new Properties()
+            localProps.load(new FileInputStream(file('../local.properties')))
+
+            storeFile file(localProps["RELEASE_STORE_FILE"])
+            keyAlias localProps["RELEASE_KEY_ALIAS"]
+            storePassword localProps["RELEASE_STORE_PASSWORD"]
+            keyPassword localProps["RELEASE_KEY_PASSWORD"]
+        }
     }
 
     buildTypes {
@@ -71,14 +79,14 @@ dependencies {
     api("com.android.support:appcompat-v7:${rootProject.supportLibs}") {
         exclude group: 'com.android.support', module: 'support-v4'
     }
-    api "com.android.support.constraint:constraint-layout:$constraint_layout"
+    api "com.android.support.constraint:constraint-layout:${rootProject.constraint_layout}"
     api("com.android.support:design:${rootProject.supportLibs}") {
         exclude module: 'animated-vector-drawable'
     }
     api "com.google.android:flexbox:0.2.6"
     api "com.android.support:multidex:${rootProject.multidex}"
     api "org.apache.commons:commons-text:1.2"
-    api "com.google.android.instantapps:instantapps:1.1.0"
+    implementation "com.google.android.instantapps:instantapps:${rootProject.instant_app}"
     /*############################################################################*/
 
     /*############################## Firebase #####################################*/
