--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,12 @@ buildscript {
     ext.buildToolsVersion = '27.0.3'
     ext.minSdkVersion = 21
     ext.targetSdkVersion = 27
-    ext.versionCode = 9
-    ext.versionName = '1.9'
+    ext.versionCode = 10
+    ext.versionName = '1.10'
 
     ext.supportLibs = '27.1.1'
-    ext.constraint_layout = '1.1.1'
+    ext.constraint_layout = '1.1.2'
+    ext.instant_app = '1.1.0'
 
     ext.arch = "1.1.1"
     ext.arch_lifecycle = "1.1.1"
@@ -19,10 +20,10 @@ buildscript {
     ext.multidex = '1.0.3'
 
     ext.crashlytics = '2.9.3'
-    ext.firebase = '16.0.0'
-    ext.firebase_message = '17.0.0'
+    ext.firebase = '16.0.1'
+    ext.firebase_message = '17.1.0'
 
-    ext.kotlin_version = '1.2.41'
+    ext.kotlin_version = '1.2.50'
     ext.anko_version = '0.10.4'
 
     ext.gson = '2.8.0'
@@ -60,7 +61,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha02'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.25.4'
         classpath 'com.google.gms:google-services:3.2.1'
