--- a/home/src/main/AndroidManifest.xml
+++ b/home/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
             </intent-filter>
 
         </activity>
+        <activity android:name=".view.FavoritesActivity" />
 
     </application>
 
