--- a/home/build.gradle
+++ b/home/build.gradle
@@ -1,1 +1,6 @@
 apply from: rootProject.file('feature.gradle')
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
+dependencies {
+}
