--- a/home/src/main/AndroidManifest.xml
+++ b/home/src/main/AndroidManifest.xml
@@ -4,10 +4,9 @@
 
     <application>
         <activity
-            android:name="com.remotejobs.io.app.home.view.HomeActivity"
+            android:name=".view.HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
-
             <meta-data
                 android:name="default-url"
                 android:value="https://remotejobs-aa979.firebaseapp.com/home" />
@@ -24,7 +23,6 @@
                     android:host="remotejobs-aa979.firebaseapp.com"
                     android:path="/home"
                     android:scheme="https" />
-
             </intent-filter>
             <intent-filter
                 android:autoVerify="true"
@@ -39,10 +37,11 @@
                     android:path="/home"
                     android:scheme="http" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".view.FavoritesActivity" />
-
+        <activity
+            android:label="Favorites"
+            android:name=".view.FavoritesActivity"
+            android:parentActivityName=".view.HomeActivity" />
     </application>
 
 </manifest>
