--- a/base/build.gradle
+++ b/base/build.gradle
@@ -73,20 +73,19 @@ crashlytics { instantAppSupport true }
 
 dependencies {
 
-    api 'com.android.support.constraint:constraint-layout:1.1.2'
-    api 'com.android.support:support-v4:27.1.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     /*###################### Android support  libs ###############################*/
-    api("com.android.support:appcompat-v7:${rootProject.supportLibs}") {
+    api('androidx.appcompat:appcompat:1.0.0') {
         exclude group: 'com.android.support', module: 'support-v4'
     }
-    api "com.android.support.constraint:constraint-layout:${rootProject.constraint_layout}"
-    api("com.android.support:design:${rootProject.supportLibs}") {
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    api('com.google.android.material:material:1.0.0') {
         exclude module: 'animated-vector-drawable'
     }
     api "com.google.android:flexbox:0.2.6"
-    api "com.android.support:multidex:${rootProject.multidex}"
+    api 'androidx.multidex:multidex:2.0.0'
     api "org.apache.commons:commons-text:1.2"
     implementation "com.google.android.instantapps:instantapps:${rootProject.instant_app}"
     /*############################################################################*/
@@ -133,15 +132,15 @@ dependencies {
 
     /*######################## Architetures Components ###########################*/
     // Room Database
-    api "android.arch.persistence.room:runtime:${rootProject.arch}"
-    api "android.arch.persistence.room:rxjava2:${rootProject.arch}"
+    api 'androidx.room:room-runtime:2.0.0-rc01'
+    api 'androidx.room:room-rxjava2:2.0.0-rc01'
     /*api "android.arch.persistence.room:testing:${rootProject.arch}"*/
-    kapt "android.arch.persistence.room:compiler:${rootProject.arch}"
+    kapt 'androidx.room:room-compiler:2.0.0-rc01'
 
     // Lifecycle
-    api "android.arch.lifecycle:runtime:${rootProject.arch_lifecycle}"
-    api "android.arch.lifecycle:extensions:${rootProject.arch_lifecycle}"
-    kapt "android.arch.lifecycle:compiler:${rootProject.arch}"
+    api 'androidx.lifecycle:lifecycle-runtime:2.0.0'
+    api 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
 
     //implementation "android.arch.navigation:navigation-fragment-ktx:${rootProject.nav_version}"
     //implementation "android.arch.navigation:navigation-ui-ktx:${rootProject.nav_version}"
@@ -159,7 +158,7 @@ dependencies {
 
     /*############################### Test ibs ###################################*/
     testImplementation "junit:junit:${rootProject.junit}"
-    androidTestImplementation "com.android.support.test:runner:${rootProject.runner}"
+    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:${rootProject.kotlin_version}"
 
     // Mokito
@@ -169,27 +168,27 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.mockwebserver}"
 
     // Arch Test for Archtecture components test
-    testImplementation("android.arch.core:core-testing:${rootProject.arch}", {
+    testImplementation('androidx.arch.core:core-testing:2.0.0', {
         exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-core-utils'
     })
 
     // Espresso for UI test
-    androidTestImplementation("com.android.support.test.espresso:espresso-core:${rootProject.espresso}", {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     })
-    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:${rootProject.espresso}", {
+    androidTestImplementation('androidx.test.espresso:espresso-contrib:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     })
-    androidTestImplementation("com.android.support.test.espresso:espresso-intents:${rootProject.espresso}", {
+    androidTestImplementation('androidx.test.espresso:espresso-intents:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     })
-    testImplementation "com.android.support.test.espresso:espresso-idling-resource:${rootProject.espresso}"
-    androidTestImplementation "com.android.support.test.uiautomator:uiautomator-v18:${rootProject.uiautomator}"
+    testImplementation 'androidx.test.espresso:espresso-idling-resource:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0-alpha4'
     /*############################################################################*/
 
     application project(':installed')
