--- a/home/build.gradle
+++ b/home/build.gradle
@@ -3,4 +3,5 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 dependencies {
+    implementation 'com.github.sujithkanna:smileyrating:1.6.8'
 }
