--- a/base/build.gradle
+++ b/base/build.gradle
@@ -76,17 +76,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     /*###################### Android support  libs ###############################*/
-    api('androidx.appcompat:appcompat:1.0.0') {
+    api("androidx.appcompat:appcompat:${rootProject.appcompat}") {
         exclude group: 'com.android.support', module: 'support-v4'
     }
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-    api('com.google.android.material:material:1.0.0') {
+    api "androidx.legacy:legacy-support-v4:${rootProject.legacy_support_v4}"
+    api "androidx.constraintlayout:constraintlayout:${rootProject.constraintlayout}"
+    api("com.google.android.material:material:${rootProject.material}") {
         exclude module: 'animated-vector-drawable'
     }
-    api "com.google.android:flexbox:0.2.6"
-    api 'androidx.multidex:multidex:2.0.0'
-    api "org.apache.commons:commons-text:1.2"
+    api "com.google.android:flexbox:${rootProject.flexbox}"
+    api "androidx.multidex:multidex:${rootProject.multidex}"
+    api "org.apache.commons:commons-text:${rootProject.commons_text}"
     implementation "com.google.android.instantapps:instantapps:${rootProject.instant_app}"
     /*############################################################################*/
 
@@ -132,15 +132,15 @@ dependencies {
 
     /*######################## Architetures Components ###########################*/
     // Room Database
-    api 'androidx.room:room-runtime:2.0.0-rc01'
-    api 'androidx.room:room-rxjava2:2.0.0-rc01'
+    api "androidx.room:room-runtime:${rootProject.room_runtime}"
+    api "androidx.room:room-rxjava2:${rootProject.room_rxjava2}"
     /*api "android.arch.persistence.room:testing:${rootProject.arch}"*/
-    kapt 'androidx.room:room-compiler:2.0.0-rc01'
+    kapt "androidx.room:room-compiler:${rootProject.room_compiler}"
 
     // Lifecycle
-    api 'androidx.lifecycle:lifecycle-runtime:2.0.0'
-    api 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    api "androidx.lifecycle:lifecycle-runtime:${rootProject.lifecycle_runtime}"
+    api "androidx.lifecycle:lifecycle-extensions:${rootProject.lifecycle_extensions}"
+    kapt "androidx.lifecycle:lifecycle-compiler:${rootProject.lifecycle_compiler}"
 
     //implementation "android.arch.navigation:navigation-fragment-ktx:${rootProject.nav_version}"
     //implementation "android.arch.navigation:navigation-ui-ktx:${rootProject.nav_version}"
@@ -158,7 +158,7 @@ dependencies {
 
     /*############################### Test ibs ###################################*/
     testImplementation "junit:junit:${rootProject.junit}"
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
+    androidTestImplementation "androidx.test:runner:${rootProject.runner}"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:${rootProject.kotlin_version}"
 
     // Mokito
@@ -168,27 +168,27 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.mockwebserver}"
 
     // Arch Test for Archtecture components test
-    testImplementation('androidx.arch.core:core-testing:2.0.0', {
+    testImplementation("androidx.arch.core:core-testing:${rootProject.core_testing}", {
         exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-core-utils'
     })
 
     // Espresso for UI test
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
+    androidTestImplementation("androidx.test.espresso:espresso-core:${rootProject.espresso_core}", {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     })
-    androidTestImplementation('androidx.test.espresso:espresso-contrib:3.1.0-alpha4', {
+    androidTestImplementation("androidx.test.espresso:espresso-contrib:${rootProject.espresso_contrib}", {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     })
-    androidTestImplementation('androidx.test.espresso:espresso-intents:3.1.0-alpha4', {
+    androidTestImplementation("androidx.test.espresso:espresso-intents:${rootProject.espresso_intents}", {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     })
-    testImplementation 'androidx.test.espresso:espresso-idling-resource:3.1.0-alpha4'
-    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0-alpha4'
+    testImplementation "androidx.test.espresso:espresso-idling-resource:${rootProject.espresso_idling_resource}"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:${rootProject.uiautomator}"
     /*############################################################################*/
 
     application project(':installed')
