--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,22 @@ buildscript {
     ext.versionCode = 13
     ext.versionName = '1.13'
 
-    ext.supportLibs = '28.0.0'
-    ext.constraint_layout = '1.1.2'
+    ext.appcompat = "1.0.0"
+    ext.legacy_support_v4 = "1.0.0"
+    ext.constraintlayout = "2.0.0-alpha2"
     ext.instant_app = '1.1.0'
+    ext.material = "1.0.0"
 
-    ext.arch = "1.1.1"
-    ext.arch_lifecycle = "1.1.1"
-    ext.nav_version = "1.0.0-alpha01"
+    ext.flexbox = "0.2.6"
+    ext.multidex = "2.0.0"
+    ext.commons_text = "1.2"
+    ext.room_runtime = "2.0.0-rc01"
+    ext.room_rxjava2 = "2.0.0-rc01"
+    ext.room_compiler = "2.0.0-rc01"
+    ext.lifecycle_runtime = "2.0.0"
+    ext.lifecycle_extensions = "2.0.0"
+    ext.lifecycle_compiler = "2.0.0"
 
-    ext.multidex = '1.0.3'
 
     ext.crashlytics = '2.9.3'
     ext.firebase = '16.0.1'
@@ -42,17 +49,20 @@ buildscript {
     ext.lottie = '2.5.5'
 
     ext.junit = '4.12'
-    ext.runner = '0.5'
     ext.espresso = '3.0.1'
+    ext.runner = "1.1.0-alpha4"
+    ext.core_testing = "2.0.0"
+    ext.espresso_core = "3.1.0-alpha4"
+    ext.espresso_contrib = "3.1.0-alpha4"
+    ext.espresso_intents = "3.1.0-alpha4"
+    ext.espresso_idling_resource = "3.1.0-alpha4"
+    ext.uiautomator = "2.2.0-alpha4"
 
     ext.mockwebserver = "3.8.1"
     ext.mockitoVersion = '2.13.0'
     ext.mockito_kotlin = "1.5.0"
-    ext.timber = "4.6.0"
-    ext.hamcrest = "2.0.0.0"
     ext.testRunnerVersion = '1.0.1'
     ext.requestMatcherVersion = '2.2.0'
-    ext.uiautomator = '2.1.3'
 
     repositories {
         google()
