add jenkins file

--- a/installed/build.gradle
+++ b/installed/build.gradle
@@ -15,16 +15,37 @@ android {
         multiDexEnabled true
     }
 
+
+    def keystoreProperties = new Properties()
+    def keystorePropertiesFile = file('../local.properties')
+    def env = System.getenv()
+
+    if (keystorePropertiesFile.exists()) {
+        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    } else {
+
+        // Load keystore properties from environment or set their default values
+
+        if (env['KEYSTORE_HOME']) keystoreProperties.put('RELEASE_STORE_FILE', env['RELEASE_STORE_FILE'])
+        else keystoreProperties.put('RELEASE_STORE_FILE', "../remotejobs.jks")
+
+        if (env['KEYSTORE_ALIAS']) keystoreProperties.put('RELEASE_KEY_ALIAS', env['RELEASE_KEY_ALIAS'])
+        else keystoreProperties.put('RELEASE_KEY_ALIAS', "remotejobs")
+
+        if (env['KEYSTORE_KEY_PASS']) keystoreProperties.put('RELEASE_STORE_PASSWORD', env['RELEASE_STORE_PASSWORD'])
+        else keystoreProperties.put('RELEASE_STORE_PASSWORD', "myDefaultStorePass")
+
+        if (env['KEYSTORE_KEY_PASS']) keystoreProperties.put('RELEASE_KEY_PASSWORD', env['RELEASE_KEY_PASSWORD'])
+        else keystoreProperties.put('RELEASE_KEY_PASSWORD', "myDefaultKeyPass")
+    }
+
     signingConfigs {
         debug {}
         release {
-            Properties localProps = new Properties()
-            localProps.load(new FileInputStream(file('../local.properties')))
-
-            storeFile file(localProps["RELEASE_STORE_FILE"])
-            keyAlias localProps["RELEASE_KEY_ALIAS"]
-            storePassword localProps["RELEASE_STORE_PASSWORD"]
-            keyPassword localProps["RELEASE_KEY_PASSWORD"]
+            storeFile file(keystoreProperties["RELEASE_STORE_FILE"])
+            keyAlias keystoreProperties["RELEASE_KEY_ALIAS"]
+            storePassword keystoreProperties["RELEASE_STORE_PASSWORD"]
+            keyPassword keystoreProperties["RELEASE_KEY_PASSWORD"]
         }
     }
 
