--- a/feature.gradle
+++ b/feature.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
         versionCode rootProject.versionCode
         versionName rootProject.versionName
-        testInstrumentationRunner "com.remotejobs.RemoteOkTestRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -59,4 +59,42 @@ dependencies {
     // Dagger Android
     implementation "com.google.dagger:dagger-android-support:$rootProject.dagger"
     kapt "com.google.dagger:dagger-android-processor:$project.dagger"
+
+    /*############################### Test ibs ###################################*/
+    testImplementation "junit:junit:${rootProject.junit}"
+    androidTestImplementation "androidx.test:runner:${rootProject.runner}"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:${rootProject.kotlin_version}"
+
+    // Mokito
+    testImplementation "org.mockito:mockito-core:${rootProject.mockitoVersion}"
+
+    // Mockserver for resquest mock
+    testImplementation "br.com.concretesolutions:requestmatcher:${rootProject.requestMatcherVersion}"
+    androidTestImplementation "br.com.concretesolutions:requestmatcher:${rootProject.requestMatcherVersion}"
+    testImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.mockwebserver}"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.mockwebserver}"
+
+    // Arch Test for Archtecture components test
+    testImplementation("androidx.arch.core:core-testing:${rootProject.core_testing}", {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    })
+
+    // Espresso for UI test
+    androidTestImplementation("androidx.test.espresso:espresso-core:${rootProject.espresso_core}", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    })
+    androidTestImplementation("androidx.test.espresso:espresso-contrib:${rootProject.espresso_contrib}", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    })
+    androidTestImplementation("androidx.test.espresso:espresso-intents:${rootProject.espresso_intents}", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    })
+    testImplementation "androidx.test.espresso:espresso-idling-resource:${rootProject.espresso_idling_resource}"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:${rootProject.uiautomator}"
+    /*############################################################################*/
 }
