--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     ext.play_core = "1.3.6"
     ext.core_ktx = "1.0.1"
 
-    ext.flexbox = "0.2.6"
+    ext.flexbox = "1.1.0"
     ext.multidex = "2.0.0"
     ext.commons_text = "1.2"
     ext.room_runtime = "2.0.0"
@@ -24,7 +24,7 @@ buildscript {
     ext.firebase = '16.0.6'
     ext.firebase_message = '17.3.4'
 
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.3.11'
     ext.anko_version = '0.10.4'
 
     ext.gson = '2.8.0'
@@ -61,12 +61,14 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://dl.bintray.com/android/android-tools' }
+        maven { url 'https://google.bintray.com/flexbox-layout' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0-alpha07'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.26.0'
-        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.google.gms:google-services:4.2.0'
     }
 }
 
@@ -75,6 +77,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://dl.bintray.com/android/android-tools' }
+        maven { url 'https://google.bintray.com/flexbox-layout' }
     }
 }
 
