--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript {
     ext.firebase = '16.0.6'
     ext.firebase_message = '17.3.4'
 
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.3.20'
     ext.anko_version = '0.10.4'
 
     ext.gson = '2.8.0'
@@ -65,7 +65,7 @@ buildscript {
         maven { url 'https://google.bintray.com/flexbox-layout' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0-alpha07'
+        classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.26.0'
         classpath 'com.google.gms:google-services:4.2.0'
