--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,12 +69,12 @@ android {
     flavorDimensions "experience"
     productFlavors {
         instant {
-            versionCode 19
-            versionName "1.19"
+            versionCode 21
+            versionName "1.21"
         }
         installed {
-            versionCode 20
-            versionName "1.20"
+            versionCode 22
+            versionName "1.22"
         }
     }
 
@@ -147,8 +147,8 @@ dependencies {
     /*############################ Gson: Json Converter ##########################*/
     implementation "com.squareup.retrofit2:converter-gson:${rootProject.retrofit}"
     implementation "com.google.code.gson:gson:${rootProject.gson}"
-    debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-    debugImplementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
     /*############################################################################*/
 
     /*########################### Image libs #####################################*/
